@@ -15,13 +15,13 @@ import java.io.UnsupportedEncodingException;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
-import java.util.List;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
-import es.shosha.shosha.dominio.Lista;
+import es.shosha.shosha.LectorQR;
 import es.shosha.shosha.dominio.Usuario;
+import es.shosha.shosha.negocio.NegocioChecksum;
 import es.shosha.shosha.persistencia.sqlite.AdaptadorBD;
 
 /**
@@ -34,6 +34,8 @@ public class ParticipaPers extends AsyncTask<String, Void, String> {
     private final static String LISTA = "lista=";
     private final static String USUARIO = "usuario=";
     private final static String CLAVE = "clave=";
+    private LectorQR lqr;
+    private int lista,usuario;
 
     public static final String MULTIPLES_LISTAS = "multiple";
     public static final String INSERT = "insert";
@@ -41,102 +43,76 @@ public class ParticipaPers extends AsyncTask<String, Void, String> {
 
     private Context contexto;
     private final CountDownLatch count;
-    private List<Lista> listas;
-
-    public ParticipaPers(Context contexto) {
-        this.contexto = contexto;
-        this.count = null;
-    }
-
-    public ParticipaPers(Context contexto, List<Lista> lLista) {
-        this.contexto = contexto;
-        this.listas = lLista;
-        this.count = null;
-    }
+    private String respuesta,accion="";
 
     public ParticipaPers(Context contexto, CountDownLatch count) {
         this.contexto = contexto;
         this.count = count;
     }
+    public ParticipaPers(Context contexto, CountDownLatch count, LectorQR lectorQR) {
+        this.contexto = contexto;
+        this.count = count;
+        this.lqr=lectorQR;
+    }
 
     @Override
     protected String doInBackground(String... params) {
-        String data = "", respuesta = "";
+        String data = "",respuesta="";
         Usuario usu = null;
+        if (params.length == 1) {
+            try {
+                data = URLEncoder.encode(params[0].toString(), "UTF-8");
+            } catch (UnsupportedEncodingException e) {
+                e.printStackTrace();
+            }
 
-        if (params.length == 1 && params[0].equals(MULTIPLES_LISTAS)) {
+            try {
+                java.net.URL urlObj = new URL(URL_GET + LISTA + data);
 
-            for (Lista l : listas)
-                jsonParser(getDataJson(String.valueOf(l.getId())));
+                HttpURLConnection lu = (HttpURLConnection) urlObj.openConnection();
 
-            if (count != null)
-                count.countDown();
+                BufferedReader rd = new BufferedReader(new InputStreamReader(lu.getInputStream()));
+                String line = "", res = "";
+                while ((line = rd.readLine()) != null) {
+                    res += line;
+                }
 
-        } else if (params.length == 1) {
-            jsonParser(getDataJson(params[0]));
-            if (count != null)
-                count.countDown();
+                rd.close();
+                jsonParser(res);
 
+                if (count != null)
+                    count.countDown();
 
-        } else if (params.length == 4 && params[0].equals(INSERT) && !params[1].equals("qr")) {
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
+        }else if (params.length == 4 && params[0].equals("insert")) {
+            accion="insert";
             insertMode(params[1], params[2], params[3]);
-        } else if (params.length == 4 && params[0].equals(INSERT) && params[1].equals("qr")) {
-            insertMode(params[2], params[3]);
-        } else {
+        }
+        else {
             try {
                 lanzadorExcepcion();
             } catch (Exception e) {
                 e.printStackTrace();
             }
         }
-        //  NegocioChecksum.setChecksum("participa");
         return respuesta;
-    }
-
-    private String getDataJson(String value) {
-        String data = "", res = "";
-        try {
-            data = URLEncoder.encode(value, UTF_8);
-        } catch (UnsupportedEncodingException e) {
-            e.printStackTrace();
-        }
-
-        try {
-            java.net.URL urlObj = new URL(URL_GET + LISTA + data);
-
-            HttpURLConnection lu = (HttpURLConnection) urlObj.openConnection();
-
-            BufferedReader rd = new BufferedReader(new InputStreamReader(lu.getInputStream()));
-            String line = "";
-            while ((line = rd.readLine()) != null) {
-                res += line;
-            }
-
-            rd.close();
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-        return res;
     }
 
     /**
      * Añade un participante a una lista
      *
-     * @param params 0:idLista, 1:usuario, 2:clave o 0:qrCode, 1:usuario
+     * @param params 0:idLista, 1:usuario, 2:clave
      */
     private void insertMode(String... params) {
-        String res = "";
-        String lista = "",
-                usuario = "", clave = "";
+        String res="", clave="";
+        lista = -1;
+        usuario = -1;
         try {
-            if (params.length != 2) {
-                lista = URLEncoder.encode(params[0], UTF_8);
-                clave = URLEncoder.encode(params[1], UTF_8);
-                usuario = URLEncoder.encode(params[2], UTF_8);
-            } else {
-                clave = URLEncoder.encode(params[0], UTF_8);
-                usuario = URLEncoder.encode(params[1], UTF_8);
-            }
+            lista = Integer.valueOf(params[0]);
+            clave = URLEncoder.encode(params[1], "UTF-8");
+            usuario = Integer.valueOf(params[2]);
         } catch (UnsupportedEncodingException e) {
             e.printStackTrace();
         } catch (NumberFormatException e) {
@@ -144,15 +120,8 @@ public class ParticipaPers extends AsyncTask<String, Void, String> {
         }
 
         try {
-            java.net.URL urlObj;
-
-            if (params.length != 2)
-                urlObj = new URL(URL_ADD + LISTA + lista + "&" + USUARIO + usuario + "&" + CLAVE + clave);
-            else
-                urlObj = new URL(URL_ADD_QR + USUARIO + usuario + "&" + CLAVE + clave);
-
-            Log.i("URL Participa", urlObj.toString());
-
+            java.net.URL urlObj = new URL(URL_ADD + LISTA + lista + "&" + USUARIO + usuario + "&" + CLAVE + clave);
+            System.out.println(urlObj.toString());
             HttpURLConnection lu = (HttpURLConnection) urlObj.openConnection();
 
             BufferedReader rd = new BufferedReader(new InputStreamReader(lu.getInputStream()));
@@ -164,21 +133,23 @@ public class ParticipaPers extends AsyncTask<String, Void, String> {
 
             rd.close();
             System.out.println("Insert response: " + res);
-            JSONObject jo = new JSONObject(res);
-            res = jo.getString("success");
-
+            JSONObject jo=new JSONObject(res);
+            respuesta=jo.getString("success");
             Log.i("ParticipaPers", res);
 
         } catch (IOException e) {
             e.printStackTrace();
-        } catch (JSONException e2) {
+        } catch(JSONException e2){
             e2.printStackTrace();
         }
     }
 
     @Override
     protected void onPostExecute(String s) {
-        super.onPostExecute(s);
+       NegocioChecksum.setChecksum("participa");
+        if (accion.equals("insert")) {
+            this.lqr.sigueAnadirParticipante(!respuesta.equals("1"),usuario,lista);
+        }
     }
 
     private void jsonParser(String data) {
